--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p {
     text-align: center;
 }
 .center {
-    margin-left: auto;
+    margin-left: -35%;
     margin-right: auto;
     width: 20%;
 }
