Revert "margin-left: 35%"
This reverts commit 8294f80c273a2ae00f4228ff4b50c67767c399e0.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p {
     text-align: center;
 }
 .center {
-    margin-left: -35%;
+    margin-left: auto;
     margin-right: auto;
     width: 20%;
 }
